--- a/robert_baxter_C971_/robert_baxter_C971_/Views/TermEdit.xaml
+++ b/robert_baxter_C971_/robert_baxter_C971_/Views/TermEdit.xaml
@@ -36,6 +36,50 @@
                 <Label Grid.Row="2" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Start Date</Label>
                 <DatePicker Grid.Row="2" Grid.Column="1" x:Name="EndDatePicker"></DatePicker>
             </Grid>
+            <Button x:Name="AddCourse" Text="Add Course" Clicked="AddCourse_Clicked"></Button>
+            <CollectionView
+                x:Name="CourseCollectionView"
+                ItemsSource="{Binding Courses}"
+                EmptyView="No Courses"
+                SelectionMode="Single"
+                SelectionChanged="CourseCollectionView_SelectionChanged">
+                
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout Orientation="Vertical" ItemSpacing="10"></LinearItemsLayout>
+                </CollectionView.ItemsLayout>
+
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout>
+                            <Grid Padding="5" RowSpacing="1" ColumnSpacing="22" BackgroundColor="NavajoWhite">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+
+                                <Label Grid.Row="0" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">Course Name</Label>
+                                <Label Text="{Binding Name}" FontSize="Large" Grid.Row="0" Grid.Column="1" VerticalTextAlignment="Center" />
+
+                                <Label Grid.Row="1" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">Instructor Name</Label>
+                                <Label Text="{Binding Instructor}" FontSize="Large" Grid.Row="1" Grid.Column="1" VerticalTextAlignment="Center" />
+
+                                <Label Grid.Row="2" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">Start Date</Label>
+                                <Label Text="{Binding StartDate, StringFormat='{0:M/dd/yyyy}'}" FontSize="Medium" Grid.Row="2" Grid.Column="1" VerticalTextAlignment="Center" />
+
+                                <Label Grid.Row="3" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">End Date</Label>
+                                <Label Text="{Binding EndDate, StringFormat='{0:M/dd/yyyy}'}" FontSize="Medium" Grid.Row="3" Grid.Column="1" VerticalTextAlignment="Center" />
+                            </Grid>
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
