--- a/robert_baxter_C971_/robert_baxter_C971_/Views/TermAdd.xaml
+++ b/robert_baxter_C971_/robert_baxter_C971_/Views/TermAdd.xaml
@@ -15,7 +15,7 @@
                 Padding="5"
                 RowSpacing="1"
                 ColumnSpacing="1"
-                BackgroundColor="NavajoWhite">
+                BackgroundColor="WhiteSmoke">
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
