finished assessments with some needed changes

--- a/robert_baxter_C971_/robert_baxter_C971_/Views/TermEdit.xaml
+++ b/robert_baxter_C971_/robert_baxter_C971_/Views/TermEdit.xaml
@@ -8,6 +8,7 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Save" Clicked="SaveTerm_Clicked"></ToolbarItem>
         <ToolbarItem Text="Delete" Clicked="DeleteTerm_Clicked"></ToolbarItem>
+        <ToolbarItem Clicked="CancelTerm_Clicked" Text="Cancel"></ToolbarItem>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
