--- a/robert_baxter_C971_/robert_baxter_C971_/Views/AssessmentEdit.xaml
+++ b/robert_baxter_C971_/robert_baxter_C971_/Views/AssessmentEdit.xaml
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="robert_baxter_C971_.Views.CourseAdd">
+             x:Class="robert_baxter_C971_.Views.AssessmentEdit">
     <NavigationPage.TitleView>
-        <Label Text="Add New Course" FontSize="Medium"></Label>
+        <Label Text="Add New Assessment" FontSize="Medium"></Label>
     </NavigationPage.TitleView>
     <ContentPage.ToolbarItems>
-        <ToolbarItem Clicked="SaveCourse_Clicked" Text="Save"></ToolbarItem>
-        <ToolbarItem Clicked="CancelCourse_Clicked" Text="Cancel"></ToolbarItem>
+        <ToolbarItem Clicked="SaveAssessment_Clicked" Text="Save"></ToolbarItem>
+        <ToolbarItem Clicked="DeleteAssessment_Clicked" Text="Delete"></ToolbarItem>
+        <ToolbarItem Clicked="CancelAssessment_Clicked" Text="Cancel"></ToolbarItem>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
@@ -22,7 +23,6 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
@@ -30,38 +30,28 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <Label Grid.Row="0" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Course Name</Label>
+                <Label Grid.Row="0" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Assessment Name</Label>
                 <Entry 
-                    x:Name="CourseName"
-                    Placeholder="Enter Course Name"
+                    x:Name="AssessmentName"
+                    Placeholder="Enter Name"
                     Grid.Row="0"
                     Grid.Column="1"
                     VerticalTextAlignment="Center"
                     Text="{Binding Name}"></Entry>
 
-                <Label Grid.Row="1" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Instructor Name</Label>
-                <Entry 
-                    x:Name="InstructorName"
-                    Placeholder="Enter Instructor Name"
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    VerticalTextAlignment="Center"
-                    Text="{Binding Instructor}"></Entry>
+                <Label Grid.Row="1" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Type</Label>
+                <Picker Grid.Row="1" Grid.Column="1" FontSize="Medium" x:Name="AssessmentTypePicker" Title="Select a type">
+                    <Picker.Items>
+                        <x:String>Objective</x:String>
+                        <x:String>Performance</x:String>
+                    </Picker.Items>
+                </Picker>
 
                 <Label Grid.Row="2" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Start Date</Label>
                 <DatePicker Grid.Row="2" Grid.Column="1" x:Name="StartDatePicker"></DatePicker>
 
                 <Label Grid.Row="3" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">End Date</Label>
                 <DatePicker Grid.Row="3" Grid.Column="1" x:Name="EndDatePicker"></DatePicker>
-
-                <Label Grid.Row="4" Grid.Column="0" FontSize="Large" VerticalTextAlignment="Center">Notes</Label>
-                <Entry 
-                    x:Name="CourseNotes"
-                    Placeholder="Enter Notes"
-                    Grid.Row="4"
-                    Grid.Column="1"
-                    VerticalTextAlignment="Center"
-                    Text="{Binding Notes}"></Entry>
             </Grid>
         </StackLayout>
     </ContentPage.Content>
