--- a/robert_baxter_C971_/robert_baxter_C971_/Views/CourseEdit.xaml
+++ b/robert_baxter_C971_/robert_baxter_C971_/Views/CourseEdit.xaml
@@ -31,7 +31,7 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <Label Grid.Row="0" Grid.Column="0" FontSize="Large" VerticalTextAlignment="Center">Course Name</Label>
+                <Label Grid.Row="0" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Course Name</Label>
                 <Entry 
                     x:Name="CourseName"
                     Placeholder="Enter Course Name"
@@ -40,7 +40,7 @@
                     VerticalTextAlignment="Center"
                     Text="{Binding Name}"></Entry>
 
-                <Label Grid.Row="1" Grid.Column="0" FontSize="Large" VerticalTextAlignment="Center">Instructor Name</Label>
+                <Label Grid.Row="1" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Instructor Name</Label>
                 <Entry 
                     x:Name="InstructorName"
                     Placeholder="Enter Instructor Name"
@@ -55,7 +55,7 @@
                 <Label Grid.Row="3" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">End Date</Label>
                 <DatePicker Grid.Row="3" Grid.Column="1" x:Name="EndDatePicker"></DatePicker>
 
-                <Label Grid.Row="4" Grid.Column="0" FontSize="Large" VerticalTextAlignment="Center">Notes</Label>
+                <Label Grid.Row="4" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Notes</Label>
                 <Entry 
                     x:Name="CourseNotes"
                     Placeholder="Enter Notes"
@@ -65,7 +65,49 @@
                     Text="{Binding Notes}"></Entry>
             </Grid>
             <Button x:Name="AddAssessment" Text="Add Assessment" Clicked="AddAssessment_Clicked"></Button>
+            <CollectionView
+                x:Name="AssessmentCollectionView"
+                ItemsSource="{Binding Assessments}"
+                EmptyView="No Assessments"
+                SelectionMode="Single"
+                SelectionChanged="AssessmentCollectionView_SelectionChanged">
 
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout Orientation="Vertical" ItemSpacing="10"></LinearItemsLayout>
+                </CollectionView.ItemsLayout>
+
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout>
+                            <Grid Padding="5" RowSpacing="1" ColumnSpacing="22" BackgroundColor="NavajoWhite">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+
+                                <Label Grid.Row="0" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">Assessment Name</Label>
+                                <Label Text="{Binding Name}" FontSize="Medium" Grid.Row="0" Grid.Column="1" VerticalTextAlignment="Center" />
+
+                                <Label Grid.Row="1" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">Assessment Type</Label>
+                                <Label Text="{Binding Type}" FontSize="Medium" Grid.Row="1" Grid.Column="1" VerticalTextAlignment="Center" />
+
+                                <Label Grid.Row="2" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">Start Date</Label>
+                                <Label Text="{Binding StartDate, StringFormat='{0:M/dd/yyyy}'}" FontSize="Medium" Grid.Row="2" Grid.Column="1" VerticalTextAlignment="Center" />
+
+                                <Label Grid.Row="3" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" FontAttributes="Bold">End Date</Label>
+                                <Label Text="{Binding EndDate, StringFormat='{0:M/dd/yyyy}'}" FontSize="Medium" Grid.Row="3" Grid.Column="1" VerticalTextAlignment="Center" />
+                            </Grid>
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
