everything except course status

--- a/robert_baxter_C971_/robert_baxter_C971_/Views/AssessmentAdd.xaml
+++ b/robert_baxter_C971_/robert_baxter_C971_/Views/AssessmentAdd.xaml
@@ -22,6 +22,7 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
