--- a/robert_baxter_C971_/robert_baxter_C971_/Views/CourseAdd.xaml
+++ b/robert_baxter_C971_/robert_baxter_C971_/Views/CourseAdd.xaml
@@ -23,6 +23,8 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
@@ -48,17 +50,35 @@
                     VerticalTextAlignment="Center"
                     Text="{Binding Instructor}"></Entry>
 
-                <Label Grid.Row="2" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Start Date</Label>
-                <DatePicker Grid.Row="2" Grid.Column="1" x:Name="StartDatePicker"></DatePicker>
+                <Label Grid.Row="2" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Instructor Email</Label>
+                <Entry 
+                    x:Name="InstructorEmail"
+                    Placeholder="Enter Instructor Email"
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    VerticalTextAlignment="Center"
+                    Text="{Binding InstructorEmail}"></Entry>
 
-                <Label Grid.Row="3" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">End Date</Label>
-                <DatePicker Grid.Row="3" Grid.Column="1" x:Name="EndDatePicker"></DatePicker>
+                <Label Grid.Row="3" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Instructor Phone #</Label>
+                <Entry 
+                    x:Name="InstructorPhone"
+                    Placeholder="Enter Instructor Name"
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    VerticalTextAlignment="Center"
+                    Text="{Binding Instructor}"></Entry>
 
-                <Label Grid.Row="4" Grid.Column="0" FontSize="Large" VerticalTextAlignment="Center">Notes</Label>
+                <Label Grid.Row="4" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">Start Date</Label>
+                <DatePicker Grid.Row="4" Grid.Column="1" x:Name="StartDatePicker"></DatePicker>
+
+                <Label Grid.Row="5" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center">End Date</Label>
+                <DatePicker Grid.Row="5" Grid.Column="1" x:Name="EndDatePicker"></DatePicker>
+
+                <Label Grid.Row="6" Grid.Column="0" FontSize="Large" VerticalTextAlignment="Center">Notes</Label>
                 <Entry 
                     x:Name="CourseNotes"
                     Placeholder="Enter Notes"
-                    Grid.Row="4"
+                    Grid.Row="6"
                     Grid.Column="1"
                     VerticalTextAlignment="Center"
                     Text="{Binding Notes}"></Entry>
